--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 <meta charset="utf-8">
 <title> UTN FRA</title>
 <link rel="icon" type="image/x-icon" href="favicon.ico.ico">
+<link rel="icon" type="image/x-icon" href="icono.ico">
 <link rel="stylesheet" type="text/css" href="estilo.css">
 </head>
 <body>
-<h1>Control de versiones</h1>
+    <h1>Control de versiones</h1>
+    <h2>Lautaro Monserrat</h2>
 </body>
 </html>
