--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
     <h1>Control de versiones</h1>
     <h2>Lautaro Monserrat</h2>
+    <p>Gonzalez Vives Juan Pablo 24-11-2023 10:59:43 </p>
 </body>
 </html>
